tests/should_succeed/expfloat.jou
from "stdlib/io.jou" import printf

def main() -> int:
    printf("%.2f\n", 1e5)  # Output: 100000.00
    return 0
