tests/syntax_error/missing_end_quote_in_byte.jou
import "stdlib/io.jou"

def main() -> int:
    printf('?) 
    # Error: line 4: missing ' to end the byte literal
    return 0